chore: update app scheme and android package name
Update the app scheme to 'billys-blog' and change the android package name to 'com.andreasbilly.blog' to better reflect the application's branding

--- a/app.json
+++ b/app.json
@@ -5,14 +5,14 @@
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/images/icon.png",
-    "scheme": "webview",
+    "scheme": "billys-blog",
     "userInterfaceStyle": "automatic",
     "newArchEnabled": true,
     "ios": {
       "supportsTablet": true
     },
     "android": {
-      "package": "com.andreasbilly.webview",
+      "package": "com.andreasbilly.blog",
       "adaptiveIcon": {
         "backgroundColor": "#E6F4FE",
         "foregroundImage": "./assets/images/icon-foreground.png",
